ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-depi-ingress
  namespace: devops-depi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-depi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-depi
            port:
              number: 80
